feat: add workspace sync command and update documentation for prompt synchronization
新增: gitService 实现远程 Prompt 仓库同步逻辑
新增: Prompt 树视图 (promptTreeDataProvider) 与相关命令 (commands.ts)
新增: Chat Participant (chatParticipant.ts) 集成 VS Code Chat 功能
新增: 配置管理模块 (configuration.ts) 与统一日志封装 (logger.ts)
测试: 初始扩展测试文件 test/extension.test.ts
构建: 添加 esbuild 与 TSC watch 脚本；更新 esbuild.js
文档: 新增 Docs 目录（使用指南、迭代指引、构建说明、中文 README）；补充主 README.md
维护: 更新 copilot-instructions.md 以反映现阶段进度
Body:
本次提交集成核心能力：远程 Prompt 仓库同步、树形视图浏览与 Chat 会话参与。补充多份文档提升可维护性与可 onboarding 性。后续待完成：任务定义执行与调试启动流程（Create and Run Task / Launch Project）。

BREAKING CHANGE:
初始架构落定，后续对 promptRepository / gitService 的接口改动需视为潜在破坏性更新。

Co-authored-by: RockJie

--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "promptspushtool",
   "displayName": "Prompts Push Tool",
   "description": "Manage shared prompts from external repository with chat integration.",
+  "icon": "media/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BedRockJie/Prompts-Push-Tool.git"
+  },
   "publisher": "RockJie",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.106.1"
   },
@@ -40,6 +45,11 @@
       {
         "command": "promptspushtool.copyPromptContent",
         "title": "Prompts: Copy Content",
+        "category": "Prompts"
+      },
+      {
+        "command": "promptspushtool.syncPromptToWorkspace",
+        "title": "Prompts: Sync To Workspace",
         "category": "Prompts"
       },
       {
@@ -119,14 +129,14 @@
       ],
       "view/item/context": [
         {
-          "command": "promptspushtool.openPrompt",
-          "when": "view == promptspushtool.promptsExplorer && viewItem == promptFile",
-          "group": "inline@1"
-        },
-        {
           "command": "promptspushtool.copyPromptContent",
           "when": "view == promptspushtool.promptsExplorer && viewItem == promptFile",
           "group": "inline@2"
+        },
+        {
+          "command": "promptspushtool.syncPromptToWorkspace",
+          "when": "view == promptspushtool.promptsExplorer && viewItem == promptFile",
+          "group": "inline@1"
         }
       ]
     }
