--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "publisher": "RockJie",
   "version": "0.0.2",
   "engines": {
-    "vscode": "^1.106.1"
+  "vscode": ">=1.105.0"
   },
   "categories": [
     "Other"
@@ -156,7 +156,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.106.1",
+    "@types/vscode": "^1.105.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "typescript-eslint": "^8.46.3",
