chore: update vscode dependency versions and improve prompt synchronization paths
- Updated @types/vscode from ^1.106.1 to ^1.105.0 in package-lock.json.
- Adjusted vscode engine requirement to >=1.105.0.
- Modified repository URL in .vscode/settings.json for prompt synchronization.
- Enhanced command logic in commands.ts to support dynamic subfolder segments for prompt syncing, improving user experience with clearer path displays.
- Added a new TODO item regarding cursor rules synchronization.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-    "promptspushtool.repositoryUrl": "https://github.com/BedRockJie/embedded-linux-ai-prompts.git"
+    "promptspushtool.repositoryUrl": "http://172.16.81.146:8081/controlsystemembedded/aitools/cursorrulefile.git",
+    "promptspushtool.branch": "master",
+    "promptspushtool.promptsFolder": "/"
 }
