chore: update changelog and enhance command palette accessibility
- Added a Quick Pick fallback for **Prompts: Sync To Workspace** to improve usability from the Command Palette without tree selection.
- Made **Prompts: Apply Template** always accessible in the Command Palette by adding it to `menus.commandPalette`.
- Updated `.vscode/settings.json` to include a new template configuration for prompt synchronization.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,26 @@
     "typescript.tsc.autoDetect": "off",
     "promptspushtool.repositoryUrl": "http://172.16.81.146:8081/controlsystemembedded/aitools/cursorrulefile.git",
     "promptspushtool.branch": "master",
-    "promptspushtool.promptsFolder": "/"
+    "promptspushtool.promptsFolder": "/",
+    "promptspushtool.templates": [
+        {
+            "name": "C语言项目1",
+            "description": "同步常用规则与提示词 测试项目1",
+            "destination": ".cursor",
+            "files": [
+                {
+                    "source": "language/c.mdc",
+                    "target": "language/c.mdc"
+                },
+                {
+                    "source": "language/c++.mdc",
+                    "target": "language/c++.mdc"
+                },
+                {
+                    "source": "prompts/code_review/EmbeddedEnginner.mdc",
+                    "target": "prompts/code_review/EmbeddedEnginner.mdc"
+                }
+            ]
+        }
+    ]
 }
